--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>photo maker</title>
-    <link rel="stylesheet" href="task2-day25.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- the div is created for carry the searchbar so the classname of div is "searchbar"  -->
@@ -18,7 +18,7 @@
     <!-- the div is created for carry the img as  it results ,so the classname of the div is "result" -->
     <div class="result"></div>
     <!-- script is linked for the intraction of the users -->
-    <script src="task2-day25.js"></script>
+    <script src="script.js"></script>
 
 
     
